--- a/package.json
+++ b/package.json
@@ -1,17 +1,23 @@
 {
-    "name": "graphql",
-    "version": "1.0.0",
-    "description": "",
-    "main": "server.js",
-    "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
-    },
-    "keywords": [],
-    "author": "",
-    "license": "ISC",
-    "dependencies": {
-        "express": "^4.18.2",
-        "express-graphql": "^0.12.0",
-        "graphql": "^15.8.0"
-    }
+  "name": "nodejs-app-graphql",
+  "version": "1.0.0",
+  "description": "Node.js app with rest and graphql example",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js"
+  },
+  "keywords": [
+    "node",
+    "graphql",
+    "express"
+  ],
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.19.2",
+    "express-graphql": "^0.12.0",
+    "graphql": "^15.8.0",
+    "nodemon": "^3.1.0"
+  }
 }
